src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__help__tests__draw_blocks_help.snap
---
source: src/ui/draw_blocks/help.rs
expression: setup.terminal.backend()
---
"                                                                                       "
" ╭ 0.10.0 ───────────────────────────────────────────────────────────────────────────╮ "
" │                                                                                   │ "
" │                                      88                                           │ "
" │                                      88                                           │ "
" │                                      88                                           │ "
" │             ,adPPYba,   8b,     ,d8  88   ,d8    ,adPPYba,  8b,dPPYba,            │ "
" │            a8"     "8a   `Y8, ,8P'   88 ,a8"    a8P_____88  88P'   "Y8            │ "
" │            8b       d8     )888(     8888[      8PP"""""""  88                    │ "
" │            "8a,   ,a8"   ,d8" "8b,   88`"Yba,   "8b,   ,aa  88                    │ "
" │             `"YbbdP"'   8P'     `Y8  88   `Y8a   `"Ybbd8"'  88                    │ "
" │                                                                                   │ "
" │                 A simple tui to view & control docker containers                  │ "
" │                                                                                   │ "
" │ ( tab ) or ( shift+tab ) change panels                                            │ "
" │ ( ↑ ↓ ) or ( j k ) or ( PgUp PgDown ) or ( Home End ) change selected line        │ "
" │ ( enter ) send docker container command                                           │ "
" │ ( e ) exec into a container                                                       │ "
" │ ( h ) toggle this help information - or click heading                             │ "
" │ ( s ) save logs to file                                                           │ "
" │ ( m ) toggle mouse capture - if disabled, text on screen can be selected & copied │ "
" │ ( F1 ) or ( / ) enter filter mode                                                 │ "
" │ ( 0 ) stop sort                                                                   │ "
" │ ( 1 - 9 ) sort by header - or click header                                        │ "
" │ ( esc ) close dialog                                                              │ "
" │ ( q ) quit at any time                                                            │ "
" │                                                                                   │ "
" │        currently an early work in progress, all and any input appreciated         │ "
" │                       https://github.com/mrjackwills/oxker                        │ "
" │                                                                                   │ "
" │                                                                                   │ "
" ╰───────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                       "
