src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__help__tests__draw_blocks_help_custom_color.snap
---
source: src/ui/draw_blocks/help.rs
expression: setup.terminal.backend()
---
"                                                                                                                      "
" ╭ 0.00.000 ────────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │                          88                                                                                      │ "
" │                          88                                                                                      │ "
" │  ,adPPYba,  8b,     ,d8  88   ,d8   ,adPPYba,  8b,dPPYba                                                         │ "
" │ a8"     "8a  `Y8, ,8P'   88 ,a8"   a8P_____88  88P'   "Y   config location: /home/user/.config/oxker/config.toml │ "
" │ 8b       d8    )888(     8888(     8PP"""""""  88          export location:                            /test_dir │ "
" │ "8a,   ,a8"  ,d8" "8b,   88`"Yba,  "8b,   ,aa  88            logs timezone:                              Etc/UTC │ "
" │  `"YbbdP"'  8P'     `Y8  88   `Y8a  `"Ybbd8"'  88                                                                │ "
" │                                                         a work in progress, all and any input appreciated        │ "
" │     A simple tui to view & control docker containers              https://github.com/mrjackwills/oxker           │ "
" │                                                                                                                  │ "
" │                                                      Keymap                                                      │ "
" │  q                    quit                              c Esc      close dialog                                  │ "
" │  Down Up j k Home End scroll vertically                 Left Right scroll horizontally                           │ "
" │  Control              increase scroll speed             Enter      send docker command                           │ "
" │  e                    exec into a container             Space a    mark one / all - commands apply to marked     │ "
" │  / F1                 filter mode                       i          container inspect mode                        │ "
" │  h                    toggle this panel                 #          log search mode                               │ "
" │  - =                  change log section height         f          force clear screen and redraw                 │ "
" │  1 ~ 9                sort by header - or click header  \          toggle of section visibility                  │ "
" │  Tab Back Tab         change panel                      0          stop sort                                     │ "
" │  s                    save logs to file                 m          toggle mouse capture - allows text selection  │ "
" ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                      "
