src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__help__tests__draw_blocks_help_custom_keymap_one_definition.snap
---
source: src/ui/draw_blocks/help.rs
expression: setup.terminal.backend()
---
" ╭ 0.00.000 ────────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │                          88                                                                                      │ "
" │                          88                                                                                      │ "
" │  ,adPPYba,  8b,     ,d8  88   ,d8   ,adPPYba,  8b,dPPYba                                                         │ "
" │ a8"     "8a  `Y8, ,8P'   88 ,a8"   a8P_____88  88P'   "Y   config location: /home/user/.config/oxker/config.toml │ "
" │ 8b       d8    )888(     8888(     8PP"""""""  88          export location:                            /test_dir │ "
" │ "8a,   ,a8"  ,d8" "8b,   88`"Yba,  "8b,   ,aa  88            logs timezone:                              Etc/UTC │ "
" │                                                                                                                  │ "
" │                                                      Keymap                                                      │ "
" │               n   quit                       a       close dialog                                                │ "
" │               p s scroll vertically          i j     scroll horizontally                                         │ "
" │               r   scroll to start            q       scroll to end                                               │ "
" │               Alt increase scroll speed      Enter   send docker command                                         │ "
" │               d   exec into a container      Space a mark one / all - commands apply to marked                   │ "
" │               f   filter mode                e       container inspect mode                                      │ "
" │               5   toggle this panel          g       log search mode                                             │ "
" │               k l change log section height  h       force clear screen and redraw                               │ "
" │               z   sort by name               m       toggle of section visibility                                │ "
" │               2   sort by status             1       sort by state                                               │ "
" │               y   sort by memory             v       sort by CPU                                                 │ "
" │               x   sort by Image              w       sort by ID                                                  │ "
" │               3   sort by TX                 0       sort by RX                                                  │ "
" │               t u change panel               4       stop sort                                                   │ "
" │               o   save logs to file          6       toggle mouse capture - allows text selection                │ "
" ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
