src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__help__tests__draw_blocks_help_custom_keymap_two_definition.snap
---
source: src/ui/draw_blocks/help.rs
expression: setup.terminal.backend()
---
"                                                                                                                            "
" ╭ 0.00.000 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │                           88                                                                                           │ "
" │                           88                                                                                           │ "
" │   ,adPPYba,  8b,     ,d8  88   ,d8   ,adPPYba,  8b,dPPYba,                                                             │ "
" │  a8"     "8a  `Y8, ,8P'   88 ,a8"   a8P_____88  88P'   "Y8       config location: /home/user/.config/oxker/config.toml │ "
" │  8b       d8    )888(     8888(     8PP"""""""  88               export location:                            /test_dir │ "
" │  "8a,   ,a8"  ,d8" "8b,   88`"Yba,  "8b,   ,aa  88                 logs timezone:                              Etc/UTC │ "
" │   `"YbbdP"'  8P'     `Y8  88   `Y8a  `"Ybbd8"'  88                                                                     │ "
" │                                                            a work in progress, all and any input appreciated           │ "
" │      A simple tui to view & control docker containers                 https://github.com/mrjackwills/oxker             │ "
" │                                                                                                                        │ "
" │                                                         Keymap                                                         │ "
" │ 0 1                        quit                       a b                close dialog                                  │ "
" │ 4 Caps Lock 5 Scroll Lock  scroll vertically          q s r t            scroll horizontally                           │ "
" │ 8 9                        scroll to start            6 7                scroll to end                                 │ "
" │ Alt                        increase scroll speed      Enter              send docker command                           │ "
" │ g h                        exec into a container      Space a            mark one / all - commands apply to marked     │ "
" │ k l                        filter mode                i j                container inspect mode                        │ "
" │ F5 F6                      toggle this panel          m n                log search mode                               │ "
" │ u w v x                    change log section height  o p                force clear screen and redraw                 │ "
" │ Begin Menu                 sort by name               y z                toggle of section visibility                  │ "
" │ Print Screen Tab           sort by status             Page Up Pause      sort by state                                 │ "
" │ Home Insert                sort by memory             Down Del           sort by CPU                                   │ "
" │ End Esc                    sort by Image              Back Tab Backspace sort by ID                                    │ "
" │ F1 F2                      sort by TX                 Num Lock Page Down sort by RX                                    │ "
" │ Print Screen Left Up Right change panel               F3 F4              stop sort                                     │ "
" │ 2 3                        save logs to file          F7 F8              toggle mouse capture - allows text selection  │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                            "
