src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__help__tests__draw_blocks_help_custom_keymap_two_definitions.snap
---
source: src/ui/draw_blocks/help.rs
expression: setup.terminal.backend()
---
"    ╭ 0.00.000 ──────────────────────────────────────────────────────────────────────────────────────────╮    "
"    │                                                                                                    │    "
"    │                                               88                                                   │    "
"    │                                               88                                                   │    "
"    │                                               88                                                   │    "
"    │                      ,adPPYba,   8b,     ,d8  88   ,d8    ,adPPYba,  8b,dPPYba,                    │    "
"    │                     a8"     "8a   `Y8, ,8P'   88 ,a8"    a8P_____88  88P'   "Y8                    │    "
"    │                     8b       d8     )888(     8888[      8PP"""""""  88                            │    "
"    │                     "8a,   ,a8"   ,d8" "8b,   88`"Yba,   "8b,   ,aa  88                            │    "
"    │                      `"YbbdP"'   8P'     `Y8  88   `Y8a   `"Ybbd8"'  88                            │    "
"    │                                                                                                    │    "
"    │                          A simple tui to view & control docker containers                          │    "
"    │                                                                                                    │    "
"    │ ( s ) or ( S ) select next panel                                                                   │    "
"    │ ( t ) or ( T ) select previous panel                                                               │    "
"    │ ( n ) or ( N ) scroll list down by one                                                             │    "
"    │ ( r ) or ( R ) scroll list up by one                                                               │    "
"    │ ( m ) or ( M ) scroll list down by many                                                            │    "
"    │ ( q ) or ( Q ) scroll list by up many                                                              │    "
"    │ ( o ) or ( O ) scroll list to end                                                                  │    "
"    │ ( p ) or ( P ) scroll list to start                                                                │    "
"    │ ( g ) or ( G ) horizontal scroll logs right                                                        │    "
"    │ ( f ) or ( F ) horizontal scroll logs left                                                         │    "
"    │ ( enter ) send docker container command                                                            │    "
"    │ ( d ) or ( D ) exec into a container                                                               │    "
"    │ ( f ) or ( F ) force clear the screen & redraw the gui                                             │    "
"    │ ( 4 ) or ( 5 ) toggle this help information - or click heading                                     │    "
"    │ ( l ) or ( L ) save logs to file                                                                   │    "
"    │ ( 5 ) or ( Page Down ) toggle mouse capture - if disabled, text on screen can be selected & copied │    "
"    │ ( e ) or ( E ) enter filter mode                                                                   │    "
"    │ ( 3 ) or ( 6 ) reset container sorting                                                             │    "
"    │ ( y ) or ( Y ) sort containers by name                                                             │    "
"    │ ( 0 ) or ( 9 ) sort containers by state                                                            │    "
"    │ ( 1 ) or ( 8 ) sort containers by status                                                           │    "
"    │ ( u ) or ( U ) sort containers by cpu                                                              │    "
"    │ ( x ) or ( X ) sort containers by memory                                                           │    "
"    │ ( v ) or ( V ) sort containers by id                                                               │    "
"    │ ( w ) or ( W ) sort containers by image                                                            │    "
"    │ ( z ) or ( Z ) sort containers by rx                                                               │    "
"    │ ( 2 ) or ( 7 ) sort containers by tx                                                               │    "
"    │ ( h ) or ( H ) decrease log section height                                                         │    "
"    │ ( i ) or ( I ) increase log section height                                                         │    "
"    │ ( j ) or ( J ) toggle log section visibility                                                       │    "
"    │ ( a ) or ( A ) close dialog                                                                        │    "
"    │ ( k ) or ( K ) quit at any time                                                                    │    "
"    │                                                                                                    │    "
"    │                 currently an early work in progress, all and any input appreciated                 │    "
"    │                                https://github.com/mrjackwills/oxker                                │    "
"    │                                                                                                    │    "
"    ╰────────────────────────────────────────────────────────────────────────────────────────────────────╯    "
